--- a/RxAuto/Web/RxAuto.Web/Views/Home/About.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Home/About.cshtml
@@ -13,10 +13,31 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut accumsan, arcu id tempor pharetra, sapien elit placerat sem, vitae fermentum tortor felis eu magna. Suspendisse hendrerit pulvinar malesuada. Donec pellentesque sodales dapibus. Phasellus at enim non magna tincidunt lobortis. Maecenas cursus dapibus imperdiet. Aliquam in ante neque. Nulla tincidunt efficitur rhoncus. Integer pulvinar urna sit amet ante tristique, a placerat risus ullamcorper. Curabitur facilisis rhoncus diam a dictum. Mauris sapien sapien, faucibus eget sollicitudin at, imperdiet vitae risus. Duis id lorem nec diam pellentesque mattis. Vestibulum mattis condimentum egestas. Morbi vitae enim ac lacus malesuada dapibus. Proin sit amet luctus orci, eu tristique orci. Aenean dolor magna, accumsan vitae egestas ornare, tincidunt at sapien. Morbi ac commodo erat.
             </p>
-
-            <p>
-                Fusce commodo orci non faucibus vehicula. Quisque sed volutpat nisl. Pellentesque finibus urna non mi iaculis pretium. In hac habitasse platea dictumst. Nunc bibendum ex urna, id ullamcorper turpis laoreet et. In pellentesque libero ut tellus dictum, sed lobortis justo gravida. Phasellus at hendrerit tortor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius sed massa in egestas. Integer sed semper metus. Suspendisse ut maximus massa, ac tincidunt libero. Etiam placerat velit at luctus ultrices. Curabitur commodo porta ante a condimentum.
-            </p>
+            <div class="text-center">
+                <img src="https://images.unsplash.com/photo-1505592225030-dad7a0531844?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=755&q=80" class="figure-img img-fluid rounded img-thumbnail" alt="...">
+            </div>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-6">
+            <p>Mauris finibus ex urna, vel finibus est molestie et. In vehicula ut nulla ut maximus. Vivamus mollis efficitur urna sed scelerisque. Praesent tincidunt ipsum augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum viverra massa id augue ultrices semper. Mauris imperdiet laoreet libero vitae auctor. Curabitur accumsan sem at varius blandit.</p>
+        </div>
+        <div class="col-6">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    <span class="badge badge-primary badge-pill">14</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Sed vitae orci vel libero gravida sagittis.
+                    <span class="badge badge-primary badge-pill">2</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between align-items-center">
+                    Mauris vitae sapien ullamcorper, commodo arcu id, mollis augue.
+                    <span class="badge badge-primary badge-pill">1</span>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
