--- a/RxAuto/Web/RxAuto.Web/Views/Home/Index.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Home/Index.cshtml
@@ -3,6 +3,36 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Добре дошли в RxAuto</h1>
+</div>
+<hr />
+
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper erat sit amet orci blandit, nec euismod justo luctus. Etiam vel mauris sed neque cursus auctor. Donec quis vestibulum est. Curabitur ex ex, consectetur nec turpis vel, pulvinar auctor risus. Proin luctus mauris ac purus aliquet faucibus. Donec ac eleifend orci. Nunc sed hendrerit felis. Donec sed dapibus risus. Nullam malesuada, nisi eu blandit aliquam, eros diam ullamcorper lacus, eu porta tortor odio vel justo. Sed lacinia vitae lectus in dictum. Phasellus venenatis accumsan volutpat. Ut sit amet sagittis elit. Vestibulum sit amet accumsan sem.
+            </p>
+        </div>
+        <div class="col-6">
+            <figure class="figure">
+                <img src="https://images.unsplash.com/photo-1498887960847-2a5e46312788?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" class="figure-img img-fluid rounded img-thumbnail" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+            </figure>
+        </div>
+    </div>
+    <hr />
+    <div class="row">
+        <div class="col-6">
+            <figure class="figure">
+                <img src="https://images.unsplash.com/photo-1498887960847-2a5e46312788?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80" class="figure-img img-fluid rounded img-thumbnail" alt="...">
+                <figcaption class="figure-caption text-right">A caption for the above image.</figcaption>
+            </figure>
+        </div>
+        <div class="col-6">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed semper erat sit amet orci blandit, nec euismod justo luctus. Etiam vel mauris sed neque cursus auctor. Donec quis vestibulum est. Curabitur ex ex, consectetur nec turpis vel, pulvinar auctor risus. Proin luctus mauris ac purus aliquet faucibus. Donec ac eleifend orci. Nunc sed hendrerit felis. Donec sed dapibus risus. Nullam malesuada, nisi eu blandit aliquam, eros diam ullamcorper lacus, eu porta tortor odio vel justo. Sed lacinia vitae lectus in dictum. Phasellus venenatis accumsan volutpat. Ut sit amet sagittis elit. Vestibulum sit amet accumsan sem.
+            </p>
+        </div>
+    </div>
 </div>
