--- a/RxAuto/Web/RxAuto.Web/Views/Home/Contacts.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Home/Contacts.cshtml
@@ -34,4 +34,25 @@
         </div>
         <hr />
     }
+
+    <div class="row d-flex justify-content-center">
+        <div class="col-10">
+            <div id="googleMap" style="width:100%;height:400px;"></div>
+
+            <script>
+                function myMap() {
+                    var mapProp = {
+                        center: new google.maps.LatLng(51.508742, -0.120850),
+                        zoom: 5,
+                    };
+                    var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+                }
+            </script>
+
+            <script src="https://maps.googleapis.com/maps/api/js?key=&callback=myMap"></script>
+        </div>
+    </div>
 </div>
+
+
+
