--- a/RxAuto/Web/RxAuto.Web/Views/Shared/Components/Menu/Default.cshtml
+++ b/RxAuto/Web/RxAuto.Web/Views/Shared/Components/Menu/Default.cshtml
@@ -33,7 +33,7 @@
                     <a class="nav-link text-dark" asp-controller="Home" asp-action="Contacts">Контакти</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Галерия</a>
+                    <a class="nav-link text-dark" asp-controller="Home" asp-action="Gallery">Галерия</a>
                 </li>
                 @if (this.User.IsInRole("User"))
                 {
