--- a/RxAuto/Web/RxAuto.Web/wwwroot/css/site.css
+++ b/RxAuto/Web/RxAuto.Web/wwwroot/css/site.css
@@ -139,6 +139,6 @@ body {
 }
 
 /*-- HOVER DROPDOWN MENU --*/
-/*.dropdown:hover > .dropdown-menu {
+.dropdown:hover > .dropdown-menu {
     display: block;
-}*/
+}
